# inxaneterm

./: .gitignore  CMakeLists.txt  README.md
.clangd/index/: main.cc.1A5069EAA0FBE6A7.idx  main_window.cc.21B5A6A6EE1AA8AE.idx  main_window.h.455941C761709479.idx
src/: main.cc  main_window.cc  main_window.h
